pictor (2.2) UNRELEASED; urgency=low

  * rebuild using better tools, and prepare for PPA uploads backported to
    older Ubuntu releases

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 19:06:31 -0600

pictor (2.1) lucid; urgency=low

  * debian/apache.conf: turn off indexes
  * index.php:
    - quote href's
    - use htmlspecialchars judiciously
    - deprecate weather and airport support (for now)
    - don't hardcode lower footer width
    - sanity check numbers a bit better

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 06 Feb 2010 22:30:12 -0600

pictor (2.0) lucid; urgency=low

  * Initial packaging
  * settings.php: prep for installation to /etc/pictor
  * debian/install:
    - fix install typo
    - deprecate thumbs script
  * index.php:
    - print useful error message if no pictures are found
    - generate/cache thumbnails
    - add support to enable/disable search function
    - replace album search with native php code, rather than shell find
    - deprecate old location method
    - use php's exif extractor
    - get auto-rotate working for thumbnails and generated images
    - add 1920x1080 size
    - don't force size on image display
    - move get_cache_filename() to a function
    - remove search capability for now, until we have a better way of
      handling it
    - improve slideshow handling, dark background, resize form
    - index.php: color cells light blue on hover, s/surf/goto/g
    - use /var/cache/pictor/resize dir
    - beautify table printing
    - update cache cleaning
    - add a way to change the delay on the slideshow
    - change copyright working, remove my email address
  * debian/rules, debian/dirs, debian/links: add support for a thumbnail
    cache dir
  * debian/control:
    - bump standards ver
    - misc depends
    - depend on php's imagick module
  * debian/rules: install changelog
  * debian/copyright: drop icons artifact from musica
  * debian/dirs, debian/links, debian/postinst, debian/postrm: support